# road-similarity-evaluation

./: README.md
Evaluation of road similarity and diversity/: CMakeLists.txt  readme.md
Evaluation of road similarity and diversity/assets/data/: target road.geojson
Evaluation of road similarity and diversity/src/: NDPF.h  diversity.c  rank.c
